# weather_application

./: .env  .gitignore  README.md  pyproject.toml
api/: google_api.py  weater_api.py
config/: config.py
ui/: main_page.py
ui/pages/: main_page.py  main_window.py  weather_page.py
